--- a/style.css
+++ b/style.css
@@ -6,11 +6,20 @@
 }
 
 header {
-  margin: 30px 120px;
+  padding: 30px 120px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+  background-color: #fff;
+}
+main {
+  margin-top: 140px;
 }
 .header__logo {
   display: flex;
